--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"tailwindcss -i ./src/input.css -o ./assets/style.css --watch"
+    "build": "tailwindcss -i ./src/input.css -o ./assets/style.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "preline": "^2.1.0"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.7",
+    "preline": "^2.1.0",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "sequelize-cli": "^6.6.2",
     "tailwindcss": "^3.4.3"
   }
 }
