--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "is-fullwidth-code-point": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
     "preline": "^2.1.0",
