--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.1.0",
     "is-fullwidth-code-point": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "preline": "^2.1.0",
     "sequelize": "^6.37.3"
