--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/input.css -o ./assets/style.css --watch"
+    "build": "tailwindcss -i ./src/input.css -o ./assets/style.css --watch",
+    "dev": "npx nodemon index.js"
   },
   "keywords": [],
   "author": "",
